Fixes spacing and changes color of text

--- a/tictactoe/src/App.css
+++ b/tictactoe/src/App.css
@@ -1,10 +1,12 @@
 .board {
-  color: green;
+  color: #4d8cf2;
   margin: auto;
   text-align: center;
   font-size: 50px;
 }
-
+button {
+  margin-bottom: 15px;
+}
 .grid {
   margin: auto;
 }
@@ -18,8 +20,8 @@ td {
 }
 
 .virtualPlaceholder {
-    display: inline-block;
-    height:200px;
-    width:200px;
-    background:#4d8cf2;
+  display: inline-block;
+  height:200px;
+  width:200px;
+  background:#4d8cf2;
 }
